--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
+@charset "utf-8";
+
+* {
+  outline: none;
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul {
+  list-style: none;
+}
+
+a {
+  color: #000000;
+  /* 클릭했을때 컬러/밑줄 설정 */
+  text-decoration: none;
+}
+img {
+  /* 그림 배치 위치 / 테두리 설정 */
+  vertical-align: middle;
+  border: 0;
+}
+html,
+body {
+  font-size: 14px;
+  color: #000000;
+  word-break: keep-all;
 }
