--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,17 @@
   margin: 0;
 }
 
+/* 스크롤바 전체 */
+::-webkit-scrollbar {
+  display: none;
+}
+/* 스크롤바 막대 */
+::-webkit-scrollbar-thumb {
+}
+/* 스크롤바 막대 외부 */
+::-webkit-scrollbar-track {
+}
+
 ul {
   list-style: none;
 }
